// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeDetailsModal should render with setup 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeDetailsModal
    challengeType="brisk walk"
    duration="10 mins"
    milestones={
      Array [
        Object {
          "reward": 1,
          "target": 100,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    onPressSetUp={[MockFunction]}
    unit="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "challengeType": "brisk walk",
      "duration": "10 mins",
      "milestones": Array [
        Object {
          "reward": 1,
          "target": 100,
        },
      ],
      "onPressClose": [MockFunction],
      "onPressCta": [MockFunction],
      "onPressSetUp": [MockFunction],
      "unit": "steps",
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "type": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "challengeType": "brisk walk",
        "duration": "10 mins",
        "milestones": Array [
          Object {
            "reward": 1,
            "target": 100,
          },
        ],
        "onPressClose": [MockFunction],
        "onPressCta": [MockFunction],
        "onPressSetUp": [MockFunction],
        "unit": "steps",
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeDetailsModal should render without setup 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeDetailsModal
    challengeType="brisk walk"
    duration="10 mins"
    milestones={
      Array [
        Object {
          "reward": 1,
          "target": 100,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    unit="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "challengeType": "brisk walk",
      "duration": "10 mins",
      "milestones": Array [
        Object {
          "reward": 1,
          "target": 100,
        },
      ],
      "onPressClose": [MockFunction],
      "onPressCta": [MockFunction],
      "unit": "steps",
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "type": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "challengeType": "brisk walk",
        "duration": "10 mins",
        "milestones": Array [
          Object {
            "reward": 1,
            "target": 100,
          },
        ],
        "onPressClose": [MockFunction],
        "onPressCta": [MockFunction],
        "unit": "steps",
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
